--- a/Dockerfiles/Dockerfile.frontend
+++ b/Dockerfiles/Dockerfile.frontend
@@ -1,6 +1,9 @@
 # Dockerfiles/Dockerfile.frontend
 FROM node:18-alpine
 
+# Install Git
+RUN apk add --no-cache git
+
 WORKDIR /app
 
 COPY frontend/package*.json ./
