--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "pg": "^8.11.0"
+    "@elastic/elasticsearch" : "latest",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "firebase": "latest",
+    "axios" : "latest"
   }
 }
 
