--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^18.2.0",
     "next": "^13.0.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@monaco-editor/react": "latest",
+    "@headlessui/react": "latest",
+    "react-hook-form": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
