--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
     "react-dom": "^18.2.0",
     "next": "^13.0.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0",
+    "typescript": "^4",
     "@monaco-editor/react": "latest",
     "@headlessui/react": "latest",
-    "react-hook-form": "latest"
+    "react-hook-form": "latest",
+    "react-scripts": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7"
   }
 }
 
