--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app/index.js"
   },
   "dependencies": {
     "@elastic/elasticsearch" : "latest",
