--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "firebase": "latest",
-    "axios" : "latest"
+    "axios" : "latest",
+    "typescript": "^4"
   }
 }
 
