--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@headlessui/react": "latest",
     "@monaco-editor/react": "latest",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
