--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@headlessui/react": "latest",
     "@monaco-editor/react": "latest",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
     "next": "^13.0.0",
@@ -16,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "latest",
     "react-scripts": "latest",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4"
   },
   "devDependencies": {
