--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "latest",
     "@monaco-editor/react": "latest",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
