--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,21 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "scripts": {
-    "start": "npx tsc"
-  },
   "type": "module",
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node index.js",
+    "dev": "nodemon -e ts --exec npx ts-node app/index.ts"
+  },
   "dependencies": {
     "@elastic/elasticsearch": "^8.17.1",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/firebase": "^2.4.32",
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.13",
     "axios": "latest",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
     "pg": "^8.11.0",
