--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,16 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "target": "es6",
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "outDir": "dist"
-    },
-    "lib": ["es2015"]
-  }
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "app",
+    "sourceMap": true
+  },
+  "include": ["app/**/*", "app/types/**/*"],
+  "exclude": ["node_modules"]
+}
