--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "node index.js",
+    "start": "node dist/app/index.js",
     "dev": "nodemon -e ts --exec npx ts-node app/index.ts"
   },
   "dependencies": {
