--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,13 +3,17 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
+    "outDir": "dist/app",
     "rootDir": "app",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": false,
+    "noEmit": false,
+    "resolveJsonModule": true
   },
   "include": ["app/**/*", "app/types/**/*"],
   "exclude": ["node_modules"]
