--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@monaco-editor/react": "latest",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
