--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
-    "pg": "^8.11.0",
-    "typescript": "^4"
+    "pg": "^8.11.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
