--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.17.1",
+    "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/firebase": "^2.4.32",
     "@types/node": "^22.7.4",
     "@types/pg": "^8.11.13",
     "axios": "latest",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
